@@ -8,6 +8,7 @@ Changes between 2.0.3 and 2.1.0.DEV
 - fix issue43: improve doctests with better traceback reporting on
   unexpected exceptions
 - fix issue47: timing output in junitxml for test cases is now correct
+- fix issue48: typo in MarkInfo repr leading to exception
 - introduce XXX pytest_configure_funcargs hack (thanks Ronny)
 - env/username expansion for junitxml file path (fixes issue44)
 
